--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-mysql",
-  "version": "0.0.1",
+  "name": "ChainMail",
+  "version": "0.1.0",
   "dependencies": {
     "express": "^4.10.6",
     "mysql": "^2.5.4",
